Fixed the jumping when changing absolute to relative.

--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,15 @@
 
 
 #graph-introduction{
-  width: 900px;
-  height: 700px;
+  width: 100%;
+  height: 100%;
   position: absolute;
+  z-index: -1;
   top: 20px;
-  left: 700px;
+  left: 20px;
 }
 
-#graph-overview{
+#graph-bubble-chart{
   width: 900px;
   height: 700px;
   position: absolute;
@@ -21,52 +22,7 @@
   background-color: ghostwhite;
 }
 
-#graph-the-best{
-  width: 900px;
-  height: 700px;
-  position: absolute;
-  top: 300px;
-  left: 700px;
-  background-color: ghostwhite;
-}
-
-#graph-the-worst{
-  width: 900px;
-  height: 700px;
-  position: absolute;
-  top: 300px;
-  left: 700px;
-  background-color: ghostwhite;
-}
-
-#graph-global-timeline{
-  width: 900px;
-  height: 700px;
-  position: absolute;
-  top: 300px;
-  left: 700px;
-  background-color: ghostwhite;
-}
-
-#graph-worst-timeline{
-  width: 900px;
-  height: 700px;
-  position: absolute;
-  top: 300px;
-  left: 700px;
-  background-color: ghostwhite;
-}
-
-#graph-best-timeline{
-  width: 900px;
-  height: 700px;
-  position: absolute;
-  top: 300px;
-  left: 700px;
-  background-color: ghostwhite;
-}
-
-#graph-what-about-you{
+#graph-timeline{
   width: 900px;
   height: 700px;
   position: absolute;
@@ -80,11 +36,11 @@
   width: 900px;
   height: 700px;
   position: absolute;
-  top: 350px;
+  top: 300px;
   left: 700px;
-  margin-bottom: 50px;
   background-color: ghostwhite;
 }
+
 
 #container{
   position: relative;
@@ -146,7 +102,7 @@ body{
 .arrows {
 	width: 60px;
 	height: 72px;
-    left: 20%;
+    left: 10%;
     margin-top: 20px;
 }
 
